Add button grid 2

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="display"></div>
-    <div id="arrows"></div>
+    <div id="arrows-container"></div>
     <div id="button-container"></div>
 
 
