Add button grid 3

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="display"></div>
+    <div id="display">
+        <div id="display-history" class="display">12321</div>
+        <div id="display-input" class="display">123123</div>
+    </div>
     <div id="arrows-container"></div>
     <div id="button-container"></div>
 
