--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="display">
-        <div id="display-history" class="display">12321</div>
-        <div id="display-input" class="display">123123</div>
+    <div id="columndiv">
+        <div id="display">
+            <div id="display-history" class="display">12321</div>
+            <div id="display-input" class="display">123123</div>
+        </div>
+        <div id="arrows-container"></div>
+        <div id="button-container"></div>
     </div>
-    <div id="arrows-container"></div>
-    <div id="button-container"></div>
-
 
 </body>
 </html>
