--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <div id="columndiv">
         <div id="display">
-            <div id="display-history" class="display">12321</div>
-            <div id="display-input" class="display">123123</div>
+            <div id="display-history" class="display"></div>
+            <div id="display-input" class="display"></div>
         </div>
         <div id="arrows-container"></div>
         <div id="button-container"></div>
